fix some bugs and new cross condition method

--- a/ML_Script/3_Model/test.ipynb
+++ b/ML_Script/3_Model/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_noref = pd.read_csv(\"/Users/zhengyuanrui/Decoding_SALT/Decode_SALT/2_Data/df_no_ref.csv\")"
+    "df_no = pd.read_csv(\"/Users/zhengyuanrui/SalientGoodSelf/ML_Script/2_Data/No_self.csv\")\n",
+    "df_ex = pd.read_csv(\"/Users/zhengyuanrui/SalientGoodSelf/ML_Script/2_Data/Explicit_self.csv\")\n"
    ]
   },
   {
@@ -44,20 +45,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_norefc = df_noref.iloc[:, 8:11].values\n",
-    "\n",
-    "y_noref = df_noref[\"label\"].values\n",
-    "\n",
-    "norefcolc = df_noref.iloc[:, 8:11].columns"
+    "df_exother = df_ex.query('Identity == \"Other\"')\n",
+    "df_exself = df_ex.query('Identity == \"Self\"')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Other'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "groups_no = df_noref[\"Subject\"].values"
+    "np.unique(df_exother.Identity)"
    ]
   },
   {
@@ -66,12 +75,128 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "score_noc, im_noc, coef_noc = lr_within_task(X = X_norefc, y = y_noref, group = groups_no, source=\"No_Ref\")"
+    "X_no = df_no.iloc[:, 4:7].values\n",
+    "X_exother = df_exother.iloc[:, 4:7].values\n",
+    "X_exself = df_exself.iloc[:, 4:7].values\n",
+    "\n",
+    "\n",
+    "y_no = df_no[\"Valence\"].values\n",
+    "y_exother = df_exother[\"Valence\"].values\n",
+    "y_exself = df_exself[\"Valence\"].values\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groups_no = df_no[\"Subject\"].values\n",
+    "groups_exother = df_exother[\"Subject\"].values\n",
+    "groups_exself = df_exself[\"Subject\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_noc, im_noc, coef_noc = lr_within_task(X = X_no, y = y_no, group = groups_no, source=\"No_Ref\")\n",
+    "score_exother, im_exother, coef_exother = lr_within_task(X=X_exother, y=y_exother, group=groups_exother, source=\"Explicit_Other\")\n",
+    "score_exself, im_exself, coef_exself = lr_within_task(X=X_exself, y=y_exself, group=groups_exself, source=\"Explicit_Self\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_noc['score'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_exother['score'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_exself['score'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_exs2no, im_exs2no, coef_exs2no = lr_cross_task(X_source=X_exself, y_source=y_exself, X_target=X_no, y_target=y_no, target_group=groups_no, source_name=\"Explicit_Self\", target_name=\"No_Ref\")\n",
+    "\n",
+    "df_exo2no, im_exo2no, coef_exo2no = lr_cross_task(X_source=X_exother, y_source=y_exother, X_target=X_no, y_target=y_no, target_group=groups_no, source_name=\"Explicit_Other\", target_name=\"No_Ref\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_exs2no[\"score\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_exo2no[\"score\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_exs2no= dummy_cross_task2(X_source=X_exself, y_source=y_exself, X_target=X_no, y_target=y_no, source_group = groups_exself\n",
+    ", target_group=groups_no, source_name=\"Explicit_Self\", target_name=\"No_Ref\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5263387748568729"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_exs2no[\"score\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -95,229 +220,136 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>subID</th>\n",
-       "      <th>score</th>\n",
        "      <th>source</th>\n",
        "      <th>target</th>\n",
+       "      <th>subID</th>\n",
+       "      <th>score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1001</td>\n",
-       "      <td>0.627741</td>\n",
+       "      <td>Explicit_Self</td>\n",
        "      <td>No_Ref</td>\n",
-       "      <td>No_Ref</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1002</td>\n",
-       "      <td>0.586872</td>\n",
-       "      <td>No_Ref</td>\n",
-       "      <td>No_Ref</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1003</td>\n",
-       "      <td>0.564531</td>\n",
-       "      <td>No_Ref</td>\n",
-       "      <td>No_Ref</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1004</td>\n",
-       "      <td>0.519970</td>\n",
-       "      <td>No_Ref</td>\n",
-       "      <td>No_Ref</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1005</td>\n",
-       "      <td>0.626000</td>\n",
-       "      <td>No_Ref</td>\n",
-       "      <td>No_Ref</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>159</th>\n",
-       "      <td>5237</td>\n",
-       "      <td>0.586746</td>\n",
-       "      <td>No_Ref</td>\n",
-       "      <td>No_Ref</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>160</th>\n",
-       "      <td>5238</td>\n",
-       "      <td>0.543935</td>\n",
-       "      <td>No_Ref</td>\n",
-       "      <td>No_Ref</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>161</th>\n",
-       "      <td>5239</td>\n",
-       "      <td>0.543721</td>\n",
-       "      <td>No_Ref</td>\n",
-       "      <td>No_Ref</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>162</th>\n",
-       "      <td>5240</td>\n",
-       "      <td>0.553087</td>\n",
-       "      <td>No_Ref</td>\n",
-       "      <td>No_Ref</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>163</th>\n",
-       "      <td>5242</td>\n",
-       "      <td>0.522501</td>\n",
-       "      <td>No_Ref</td>\n",
-       "      <td>No_Ref</td>\n",
+       "      <td>2064.52439</td>\n",
+       "      <td>0.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>164 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     subID     score  source  target\n",
-       "0     1001  0.627741  No_Ref  No_Ref\n",
-       "1     1002  0.586872  No_Ref  No_Ref\n",
-       "2     1003  0.564531  No_Ref  No_Ref\n",
-       "3     1004  0.519970  No_Ref  No_Ref\n",
-       "4     1005  0.626000  No_Ref  No_Ref\n",
-       "..     ...       ...     ...     ...\n",
-       "159   5237  0.586746  No_Ref  No_Ref\n",
-       "160   5238  0.543935  No_Ref  No_Ref\n",
-       "161   5239  0.543721  No_Ref  No_Ref\n",
-       "162   5240  0.553087  No_Ref  No_Ref\n",
-       "163   5242  0.522501  No_Ref  No_Ref\n",
-       "\n",
-       "[164 rows x 4 columns]"
+       "          source  target       subID  score\n",
+       "0  Explicit_Self  No_Ref  2064.52439    0.5"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "score_noc"
+    "df_exs2no"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logi = make_pipeline(\n",
-    "            MinMaxScaler(), \n",
-    "            PolynomialFeatures(interaction_only=True, include_bias=False),\n",
-    "            LogisticRegressionCV(Cs = np.logspace(-6, 3, 7), cv = 5, class_weight='balanced', \n",
-    "                                 random_state=123, max_iter=5000, multi_class=\"ovr\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import PolynomialFeatures\n",
-    "\n",
-    "poly = PolynomialFeatures(interaction_only=True, include_bias=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = poly.fit_transform(df_noref.iloc[:, 8:11])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.000e+00, 1.065e+03, 0.000e+00, 1.065e+03, 0.000e+00, 0.000e+00],\n",
-       "       [1.000e+00, 9.290e+02, 0.000e+00, 9.290e+02, 0.000e+00, 0.000e+00],\n",
-       "       [0.000e+00, 8.800e+02, 1.000e+00, 0.000e+00, 0.000e+00, 8.800e+02],\n",
-       "       ...,\n",
-       "       [1.000e+00, 7.530e+02, 0.000e+00, 7.530e+02, 0.000e+00, 0.000e+00],\n",
-       "       [1.000e+00, 6.650e+02, 1.000e+00, 6.650e+02, 1.000e+00, 6.650e+02],\n",
-       "       [1.000e+00, 9.550e+02, 1.000e+00, 9.550e+02, 1.000e+00, 9.550e+02]])"
+       "(14924, 4)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a\n"
+    "df_exs2no.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "names = poly.get_feature_names_out(df_noref.iloc[:, 8:11].columns)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['ACC', 'RT', 'ismatch', 'ACC RT', 'ACC ismatch', 'RT ismatch'],\n",
-       "      dtype=object)"
+       "(31789, 3)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names"
+    "X_exself.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['ACC', 'RT', 'ismatch'], dtype='object')"
+       "(68812, 3)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_noref.iloc[:, 8:11].columns\n"
+    "X_no.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "164"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(np.unique(groups_no))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "91"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(np.unique(groups_exself))"
    ]
   },
   {
