--- a/ML_Script/3_Model/dummy.ipynb
+++ b/ML_Script/3_Model/dummy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/root/autodl-tmp/ML_Script/3_Model'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_within_score.to_csv(os.path.join(\"../4_Result/\", \"dummy_score.csv\"))"
+    "df_within_score.to_csv(os.path.join(\"../4_Result/\", \"dummywithin_score.csv\"))"
    ]
   },
   {
@@ -250,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cross_score.to_csv(os.path.join(\"../4_Result/\", \"dummy_score.csv\"))"
+    "df_cross_score.to_csv(os.path.join(\"../4_Result/\", \"dummycross_score.csv\"))"
    ]
   },
   {
@@ -272,9 +283,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "py38",
    "language": "python",
-   "name": "python3"
+   "name": "py38"
   },
   "language_info": {
    "codemirror_mode": {
