--- a/endnote.bib
+++ b/endnote.bib
@@ -2031,22 +2031,19 @@ Publisher: Nature Publishing Group},
 	pages = {31--38},
 }
 
-@article{atlas_instructions_2022,
-	title = {Instructions and experiential learning have similar impacts on pain and pain-related brain responses but produce dissociations in value-based reversal learning},
-	volume = {11},
-	issn = {2050-084X},
-	url = {https://doi.org/10.7554/eLife.73353},
-	doi = {10.7554/eLife.73353},
-	urldate = {2022-12-09},
-	journal = {eLife},
-	author = {Atlas, Lauren Y and Dildine, Troy C and Palacios-Barrios, Esther E and Yu, Qingbao and Reynolds, Richard C and Banker, Lauren A and Grant, Shara S and Pine, Daniel S},
-	editor = {Johansen, Joshua and Büchel, Christian and Korn, Christoph W},
-	month = nov,
-	year = {2022},
-	keywords = {fMRI, conditioning, pain, instructions, expectancy, reversal learning},
-	pages = {e73353},
+@article{atlas_ann_rev_2023,
+	title = {How {Instructions}, {Learning}, and {Expectations} {Shape} {Pain} and {Neurobiological} {Responses}},
+	volume = {46},
+	url = {https://doi.org/10.1146/annurev-neuro-101822-122427},
+	doi = {10.1146/annurev-neuro-101822-122427},
+	number = {1},
+	urldate = {2023-06-13},
+	journal = {Annual Review of Neuroscience},
+	author = {Atlas, Lauren Y.},
+	year = {2023},
+	pmid = {36917820},
+	note = {\_eprint: https://doi.org/10.1146/annurev-neuro-101822-122427},
 }
-
 
 @article{Almaatouq_BBS_2022,
 	title = {Beyond {Playing} 20 {Questions} with {Nature}: {Integrative} {Experiment} {Design} in the {Social} and {Behavioral} {Sciences}},
