update reference and disucssion

--- a/endnote.bib
+++ b/endnote.bib
@@ -683,16 +683,21 @@ Publisher: American Psychological Association},
 
 
 @article{strohminger_true_2017,
-	title = {The True Self: A Psychological Concept Distinct From the Self:},
-	rights = {Â© The Author(s) 2017},
-	url = {https://journals.sagepub.com/doi/10.1177/1745691616689495},
+	title = {The {True} {Self}: {A} {Psychological} {Concept} {Distinct} {From} the {Self}},
+	volume = {12},
+	issn = {1745-6916},
+	shorttitle = {The {True} {Self}},
+	url = {https://doi.org/10.1177/1745691616689495},
 	doi = {10.1177/1745691616689495},
-	shorttitle = {The True Self},
-	abstract = {A long tradition of psychological research has explored the distinction between characteristics that are part of the self and those that lie outside of it. Rece...},
-	journaltitle = {Perspectives on Psychological Science},
+	language = {en},
+	number = {4},
+	urldate = {2023-06-14},
+	journal = {Perspectives on Psychological Science},
 	author = {Strohminger, Nina and Knobe, Joshua and Newman, George},
-	urldate = {2020-07-23},
-	date = {2017-07-03}
+	month = jul,
+	year = {2017},
+	note = {Publisher: SAGE Publications Inc},
+	pages = {551--560},
 }
 
 
@@ -1738,18 +1743,22 @@ Section: Biological Sciences}
 }
 
 
-@aticle{pool_attentional_2016,
-	title = {Attentional bias for positive emotional stimuli: A meta-analytic investigation},
+@article{pool_attentional_2016,
+	title = {Attentional bias for positive emotional stimuli: {A} meta-analytic investigation},
 	volume = {142},
-	doi = {10.1037/bul0000026},
+	issn = {1939-1455(Electronic),0033-2909(Print)},
 	shorttitle = {Attentional bias for positive emotional stimuli},
-	pages = {79--106},
+	doi = {10.1037/bul0000026},
 	number = {1},
-	journaltitle = {Psychological Bulletin},
+	journal = {Psychological Bulletin},
 	author = {Pool, Eva and Brosch, Tobias and Delplanque, Sylvain and Sander, David},
-	date = {2016},
-	keywords = {Attentional Bias, Emotions, Rewards}
+	year = {2016},
+	note = {Place: US
+Publisher: American Psychological Association},
+	keywords = {Attentional Bias, Emotions, Rewards},
+	pages = {79--106},
 }
+
 
 @article{skowronski_social_1987,
 	title = {Social judgment and social memory: The role of cue diagnosticity in negativity, positivity, and extremity biases},
@@ -1894,7 +1903,7 @@ Publisher: American Psychological Association},
 }
 
 
-@aticle{lockwood_nat_comm_2018,
+@article{lockwood_neural_2018,
 	title = {Neural mechanisms for learning self and other ownership},
 	volume = {9},
 	copyright = {2018 The Author(s)},
@@ -1905,13 +1914,13 @@ Publisher: American Psychological Association},
 	number = {1},
 	urldate = {2021-04-10},
 	journal = {Nature Communications},
-	author = {Lockwood, Patricia L. and Wittmann, Marco K. and Apps, Matthew A. J. and Klein-FlÃŒgge, Miriam C. and Crockett, Molly J. and Humphreys, Glyn W. and Rushworth, Matthew F. S.},
+	author = {Lockwood, Patricia L. and Wittmann, Marco K. and Apps, Matthew A. J. and Klein-Flügge, Miriam C. and Crockett, Molly J. and Humphreys, Glyn W. and Rushworth, Matthew F. S.},
 	month = nov,
 	year = {2018},
-	note = {Number: 1
-Publisher: Nature Publishing Group},
+	note = {Number: 1},
 	pages = {4747},
 }
+
 
 @article{forstmann_ann_rev_2016,
 	title = {Sequential {Sampling} {Models} in {Cognitive} {Neuroscience}: {Advantages}, {Applications}, and {Extensions}},
@@ -2045,18 +2054,21 @@ Publisher: Nature Publishing Group},
 	note = {\_eprint: https://doi.org/10.1146/annurev-neuro-101822-122427},
 }
 
-@article{Almaatouq_BBS_2022,
+
+@article{almaatouq_BBS_2022,
 	title = {Beyond {Playing} 20 {Questions} with {Nature}: {Integrative} {Experiment} {Design} in the {Social} and {Behavioral} {Sciences}},
 	issn = {0140-525X},
 	url = {https://doi.org/10.1017/S0140525X22002874},
 	doi = {10.1017/S0140525X22002874},
+	journal = {Behavioral and Brain Sciences},
 	author = {Almaatouq, Abdullah and Griffiths, Thomas L. and Suchow, Jordan W. and Whiting, Mark E. and Evans, James and Watts, Duncan J.},
 	year = {2022},
 	note = {Edition: 2022/12/21
 Publisher: Cambridge University Press},
-	keywords = {generalizability, experiments, (in)commensurability, cumulative knowledge},
+	keywords = {experiments, generalizability, /unread, (in)commensurability, cumulative knowledge},
 	pages = {1--55},
 }
+
 
 
 @article{Ma_JEPHPP_2010,
@@ -2220,4 +2232,23 @@ Publisher: Springer},
 	doi = {10.1016/bs.aesp.2021.03.001},
 	keywords = {Morality, Person perception, Group impressions, Impression development},
 	pages = {187--262},
+}
+
+
+@article{cole_nbr_2017,
+	series = {The power of instructions: the influence of instructions on cognition, behaviour and physical states},
+	title = {The task novelty paradox: {Flexible} control of inflexible neural pathways during rapid instructed task learning},
+	volume = {81},
+	issn = {0149-7634},
+	shorttitle = {The task novelty paradox},
+	url = {https://www.sciencedirect.com/science/article/pii/S0149763416306637},
+	doi = {10.1016/j.neubiorev.2017.02.009},
+	language = {en},
+	urldate = {2023-06-13},
+	journal = {Neuroscience \& Biobehavioral Reviews},
+	author = {Cole, Michael W. and Braver, Todd S. and Meiran, Nachshon},
+	month = oct,
+	year = {2017},
+	keywords = {Cognitive control, Neuroimaging, Functional connectivity, Automaticity, Executive functions, Network science, Instructed learning},
+	pages = {4--15},
 }
