--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -28,7 +28,7 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Morality dominates evaluations for self and others. This primacy of morality implies moral information is prioritized in cognitive processing. Indeed, previous studies reported a prioritization of negative moral information in visual processing. However, these findings were debated either for a lack of replicability or for being contaminated by other confounding factors. Here we investigated whether moral information is prioritized and, if yes, why. To control potential confounding factors such as the priming effect, we employed a well-controlled cognitive task, where participants first acquired the moral meaning of different geometric shapes (counter-balanced between participants) and then performed a simple perceptual matching task. Across five experiments (N = 192), we found a robust prioritization effect of good characters, i.e., participants responded faster and more accurately to shapes associated with good characters than shapes associated with neutral or bad characters. To understand the potential mechanisms, we examined two competing explanations for the prioritization of good characters: valence account and self-binding account. The former predicts a main effect of moral valence while the latter predicts an exclusive prioritization effect of self-referential good character. Across three experiments (N = 108) where moral characters of different valence were referring to the self or to others, we found evidence for the self-binding account: good characters associated with the self were prioritized but not when associated with others. Two additional experiments (N = 104) further suggested a spontaneous binding between good characters and the self: performance was improved even when self-referential or moral information was task-irrelevant. Together, these results suggested a robust prioritization effect of good character and that the spontaneous self-referential process is the key to such a prioritization effect.
+ Studies in social psychology claim the primacy of morality in person perception and that moral information is prioritized in cognitive processing. However, available evidence for the prioritization effect of moral information in cognitive processing is mixed, these effects were either irreplicable or explained by alternative factors other than morality. Here we examined whether moral information is prioritized using a well-controlled matching task where participants first acquired the moral meaning of different geometric shapes (counter-balanced between participants) and then performed a simple perceptual matching task. Across five experiments (N = 192), participants consistently responded faster and more accurately to shapes associated with good characters than shapes associated with neutral or bad characters. To further understand this prioritization effect of good character, we examined two competing explanations: valence account and self-binding account. The former predicts a main effect of moral valence while the latter predicts an exclusive prioritization effect of self-referential good character. Across three experiments (N = 108) where moral characters of different valence were referring to the self or others, we found evidence for the self-binding account but not the valence account: good characters associated with the self were prioritized but not when associated with others. Two additional experiments (N = 104) were conducted in which either self-referential labels or moral labels were task-irrelevant, and results revealed a spontaneous self-binding effect: performance for the combinations of self and good characters was better than other combinations. Together, these results suggested a robust prioritization effect of good character and that the spontaneous self-referential process is the key to such a prioritization effect.
   
  <!-- https://tinyurl.com/ybremelq -->
   
@@ -100,15 +100,15 @@ Summary:
         our results
 -->
 
-Morality is central to human life [@haidt_morality_2010]. Thus, gathering information about morality efficiently and accurately is crucial for individuals to navigate the social world [@brambilla_primacy_2021]. The importance of morality naturally leads to the hypothesis that morality-related information is prioritized in information processing, especially when attentional resources are limited. This hypothesis is plausible because a large volume of studies has reported that valuable stimuli are prioritized, e.g., threatening stimuli [e.g., @ohman_face_2001], rewards [@anderson_value_2011], or self-related stimuli [@sui_self_attention_2019]. Consistent with this hypothesis, a few studies reported a prioritization effect of negative moral information in visual processing: negative moral trait words  [@fiske_attention_1980; @ybarra_young_2001; @gantman_moral_2014] and faces associated with bad behaviors [@anderson_visual_2011; @eiserbeck_visual_2020] attracted more attention and were responded faster. 
+Morality is central to human life [@haidt_morality_2010]. Thus, gathering information about morality efficiently and accurately is crucial for individuals to navigate the social world [@brambilla_primacy_2021]. The importance of morality naturally leads to the hypothesis that morality-related information is prioritized in information processing, especially when attentional resources are limited. This hypothesis is plausible because a large volume of studies has reported that valuable stimuli are prioritized, e.g., threatening stimuli [e.g., @ohman_face_2001], rewards [@anderson_value_2011], or self-related stimuli [@sui_self_attention_2019]. Consistent with this hypothesis, a few studies reported a prioritization effect of negative moral information in visual processing: negative moral trait words  [@fiske_1980; @ybarra_young_2001; @gantman_moral_2014] and faces associated with bad behaviors [@anderson_visual_2011; @eiserbeck_visual_2020] attracted more attention and were responded faster. 
 
-However, not all data support this negative moral bias effect. First, the opposite effect was also reported. For example, @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Also, Abele and Bruckmueller found faster responses to moral words were not moderated by valence [@abele_bigger_2011]. Second, the robustness of the negative moral bias effect is questioned, a direct replication study failed to support the conclusion that faces associated with bad social behaviors dominate visual awareness [eg., @stein_no_2017]. Third, the prioritization effect of morality might be confounded with other factors, such as the priming effect [@firestone_cognition_2015; @firestone_moral_2016; @jussim_interpretations_2016] or differences between lexical characteristics [Larsen et al., 2006]. In short, while the importance of morality is widely recognized and there is initial evidence for a negative moral bias, whether moral information is prioritized in perceptual processing is still an open question. 
+However, evidence for this negative moral bias effect is mixed. First, the opposite effect was also reported. For example, @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Also, Abele and Bruckmueller found faster responses to moral words were not moderated by valence [@abele_bigger_2011]. Second, the robustness of the negative moral bias effect is questioned, a direct replication study failed to support the conclusion that faces associated with bad social behaviors dominate visual awareness [eg., @stein_no_2017]. Third, the prioritization effect of morality might be confounded with other factors, such as the priming effect [@firestone_cognition_2015; @firestone_moral_2016; @jussim_interpretations_2016] or differences between lexical characteristics [Larsen et al., 2006]. In short, while the importance of morality is widely recognized and there is initial evidence for a negative moral bias, whether moral information is prioritized in perceptual processing is still an open question. 
 
-Here, we conducted a series of well-controlled experiments to examine the prioritization effect of morality and its potential mechanisms. To eliminate the priming effect and other potential confounding factors, we employed a cognitive task where participants first acquired moral meanings of geometric shapes and then perform a simple perceptual matching task. The instruction-based associative learning task is based on the fact that humans can quickly learn associations between symbols and change subsequent behaviors accordingly [**citations**]. This instruction-based associative learning task is widely used in aversive learning and value-based learning [@atlas_instructions_2022; @deltomme_instructed_2018]. Unlike previous studies relies on faces or words as materials, stimuli in the current study are geometric shapes, whose moral meanings were acquired right before the perceptual matching task. By counter-balancing associations between shapes and labels of moral characters, we eliminated confounding effects by stimuli. Also, in the matching task, we repeatedly present a few pairs of shapes and labels to participants, the results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @Firestone_2016_BBS; @jussim_interpretations_2016]. Furthermore, in a series of control experiments, we confirmed that it is the moral content that drove the prioritization effect, instead of other factors such as familiarity. 
+Here, we conducted a series of well-controlled experiments to examine the prioritization effect of morality and its potential mechanisms. To eliminate the priming effect and other potential confounding factors, we employed a task where participants first acquired moral meanings of geometric shapes and then perform a simple perceptual matching task. The instruction-based associative learning task is based on the fact that humans can rapidly learn based on verbal instructions [e.g., @cole_nbr_2017]. This instruction-based associative learning task is widely used in aversive learning, value-based learning, and other tasks [@atlas_ann_rev_2023; @deltomme_instructed_2018; cole_nbr_2017]. Unlike previous studies relies on faces or words as materials, stimuli in the current study are geometric shapes, whose moral meanings were acquired right before the perceptual matching task. By counter-balancing associations between shapes and labels of moral characters, we eliminated confounding effects by stimuli. Also, in the matching task, we repeatedly present a few pairs of shapes and labels to participants, the results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @Firestone_2016_BBS; @jussim_interpretations_2016]. Finally, we conducted a series of control experiments and confirmed that it is the moral content that drove the prioritization effect, instead of other factors such as familiarity. 
+ 
+There are two competing explanations for the prioritization of good moral character. One possible explanation is the valence-based account, which has been applied to explain both positive and negative biases. For example, the negative bias toward moral information was explained by a threat detection mechanism which might be general for all negative information [@anderson_value_2011]. The positive bias toward moral information, on the other hand, was explained by the positive valence of the stimuli because the stimuli imply potential benefits [@shore_social_2013]. However, these explanations often ignore the fact that valence is subjective *per se* [@juechems_where_2019]. That is, being related to a person is the premise of a stimulus or outcome being of value to the person. The subjective value is “a broader concept that refers to the personal significance or importance that a person assigns to a particular stimulus or outcome” and when the outcome is affective or emotional, researchers also called it “valence”, i.e., positive or negative [@carruthers_valence_2021]. The subjectivity of valence leads to an alternative explanation: self-binding account [@sui_tics_2015]. The self-binding account suggests that merely associating with the self can prioritize stimuli in perception, attention, working memory, and long-term memory [@sui_self_attention_2019; @sui_tics_2015], especially for positive information [@Hu_2020_goodme]. The self-binding account suggested that the prioritization of good character is a result of spontaneous self-binding.
 
-If moral character information is prioritized, the next question is why? One possible explanation is the valence-based account, which has been applied to explain both positive and negative biases. For example, the negative bias toward moral information was explained by a threat detection mechanism which might be general for all negative information [@anderson_value_2011]. The positive bias toward moral information, on the other hand, was also explained by the positive valence of the stimuli [@shore_social_2013]. However, these explanations often ignore the fact that valence is subjective *per se* [@juechems_where_2019]. That is, being related to a person is the premise of a stimulus or outcome being of value to the person. The subjective value is “a broader concept that refers to the personal significance or importance that a person assigns to a particular stimulus or outcome” and when the outcome is affective or emotional, researchers also called it “valence”, i.e., positive or negative [@carruthers_valence_2021]. Moreover, our previous studies found that the self-concept can serve as a binding factor and merely associating with the self can prioritize stimuli in perception, attention, working memory, and long-term memory [@sui_self_attention_2019; @sui_tics_2015], especially for positive information [@Hu_2020_GoodSelf]. These findings suggested that the prioritization of moral information might be a result of spontaneous self-binding. 
-
-To test the valence account and self-binding account in the prioritization effect of moral information, we included self-relevance as an independent variable and instructed participants on which moral character is self-referential and which is not. We then tested whether the prioritization of moral character is by valence only or by the interaction between self-relevance and moral valence. The results revealed that prioritization of good character only occurred when they referred to the self of participants. These results were further confirmed in the subsequent experiments, where moral stimuli did not explicitly refer to the self or others but were merely presented together with labels of the self or others. Together, these data revealed a mutual facilitation effect of good character and the self, suggesting spontaneous moral self-referential as a novel mechanism underlying the prioritization of good character in perceptual matching.
+To test the valence account and self-binding account in the prioritization effect of good character, we manipulated self-relevance and instructed participants on which moral character is self-referential and which is not. We then tested whether the prioritization of moral character is by valence or by the interaction between self-relevance and moral valence. The results revealed that the prioritization effect only occurred when shapes of good characters referred to the self of participants. These results were further confirmed in the subsequent experiments, where shapes of good characters did not explicitly refer to the self or others but were merely presented together with labels of the self or others. Together, these data revealed a mutual facilitation effect of good character and the self, suggesting a spontaneous self-referential process as a novel mechanism underlying the prioritization of good character in perceptual matching.
 
 <!-- 
 we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
@@ -151,7 +151,7 @@ The perceptual decision-making will show certain pattern under certain task dema
 in experiment 4a and 4b, we didn't have a baseline condition where there is no word inside the shape? -->
 
 # Disclosures
-We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy was lower than 60% were excluded from analyses. Also, accurate responses with less than 200ms reaction times were excluded from the analysis. Because there were a few participants participated multiple experiments, we only included their data from first participation in the three-level hierarchical model (see Methods for details). All excluded data can be found in the shared raw data files.
+We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy was lower than 60% were excluded from analyses. Also, accurate responses with less than 200ms reaction times were excluded from the analysis. These excluded data can be found in the shared raw data files (see https://doi.org/10.5281/zenodo.8031086).
 
 All the experiments reported were not pre-registered. Most experiments (1a ~ 4b, except experiment 3b) reported in the current study were first finished between 2013 to 2016 at Tsinghua University, Beijing, China. Participants in these experiments were recruited from the local community. To increase the sample size of experiments to 50 or more [@Simmons_2013_life], we recruited additional participants from Wenzhou University, Wenzhou, China, in 2017 for experiments 1a, 1b, 4a, and 4b. Experiment 3b was finished at Wenzhou University in 2017 (See Table 1 for an overview of these experiments). 
 
@@ -1932,16 +1932,15 @@ p_exp4a_rt1 + exp4a_sdt_p + p_exp4b_rt1 + exp4b_sdt_p + p_exp4a_rt_diff_val + p_
 The same trend appeared for the RT data. For shapes associated with good character, having a "self" inside shapes reduced the reaction times as compared to having an "other" inside the shapes ($mean_{diff}$ = -55, 95% HDI [-75, -35]) has a 100% probability of being negative (< 0) and 100.00% of being significant (< -0.05). However, when the shapes were associated with the neutral character, having a "self" inside shapes increased the RTs: $mean_{diff}$ = 11, 95% HDI [1, 21]) has a 98.20% probability of being positive (> 0) and 98.15% of being significant (> 0.05). While having "self" slightly increased the RT than having "other" inside the shapes for the bad character: $mean_{diff}$ = 5, 95% HDI [-17, 27]) has a 69.45% probability of being positive (> 0) and 69.27% of being significant (> 0.05), See Figure \@ref(fig:plot-exp4-all).
 
 # Discussion
+Across nine well-controlled experiments, we tested the primacy of morality in perceptual matching tasks. First, we found a robust prioritization of good character in the shape-label matching task across five experiments. Second, across three experiments, we found that the prioritization of good character was not solely driven by moral valence, i.e., "good" vs "bad". Instead, this effect was modulated by self-relevance: prioritization only occurred when moral characters are self-referential. Finally, the prioritization of the combination of good character and self occurred, albeit weak, even when either the self- or character-related information was irrelevant to the experimental task (experiments 4a and 4b). In contrast, performance to the combination of good character and “other”, explicitly or implicitly, was worse than the combination of neutral character and “other”. Together, these results highlighted the importance of self-relevance in perceiving information related to moral characters, suggesting a self-binding process when making perceptual decision-making for moral characters. These results are in line with a growing literature on the social and relational nature of perception (@xiao_perceiving_2016; @freeman_chapter_2020; ＠hafri_perception_2021) and deepened our understanding of mechanisms of perceptual decision-making of moral information.
 
-Across nine experiments, we explored the prioritization effect of moral character and the underlying mechanism by a combination of social associative learning and perceptual matching task. First, we found a robust effect that good character was prioritized in the shape-label matching task across five experiments. Second, across three experiments, we found that the prioritization of good character was not solely driven by moral valence itself, i.e., "good" vs "bad". Instead, this effect was modulated by self-referential processing: prioritization only occurred when moral characters are self-referential. Finally, the prioritization of the combination of good character and self occurred, albeit weak, even when either the self- or character-related information was irrelevant to the experimental task (experiment 4a and 4b). In contrast, performance to the combination of good character and “other”, explicitly or implicitly, was worse than the combination of neutral character and “other”. Together, these results highlighted the importance of the self in perceiving information related to moral characters, suggesting a spontaneous self-referential process when making perceptual decision-making for moral characters. These results are in line with a growing literature on the social and relational nature of perception (@xiao_perceiving_2016; @freeman_chapter_2020; ＠hafri_perception_2021) and deepened our understanding of mechanisms of perceptual decision-making of moral information.
+The current study provided robust evidence for the prioritization of good character in perceptual decision-making. Though the primacy of morality has been argued in social psychology, whether morality is prioritized in information processing had been disputed. For instance, [@anderson_visual_2011] reported that faces associated with bad social behavior capture attention more rapidly, but an independent team failed to replicate the effect [@stein_no_2017]. In another study, @gantman_moral_2014 found that moral words are more likely to be judged as words when it was presented subliminally. But this effect may be caused by semantic priming instead of morality [@firestone_cognition_2015; @jussim_interpretations_2016]. In the current study, we employed an associative learning task, which allowed us to eliminate the semantic priming effect for two reasons. First, associations between shapes and moral characters were acquired right before the perceptual matching task, semantic priming from pre-existed knowledge was impossible. Second, there were only a few pairs of stimuli were used and each stimulus represented different conditions, making it impossible for priming between trials. Importantly, a series of control experiments (1b, 1c, and 2) further excluded other confounding factors such as familiarity, presenting sequence, or words-based associations, suggesting that it was the moral content that drove the prioritization of good character. 
 
-The current study provided robust evidence for the prioritization of good character in perceptual decision-making. The existence of the effect of moral valence on perception has been disputed. For instance, [@anderson_visual_2011] reported that faces associated with bad social behavior capture attention more rapidly, however, an independent team failed to replicate the effect [@stein_no_2017]. Another study by @gantman_moral_2014 found that moral words are more likely to be judged as words when it was presented subliminally, however, this effect may be caused by semantic priming instead of morality [@firestone_cognition_2015; @jussim_interpretations_2016]. In the current study, we found the prioritization effect across five experiments, the sample size of individual experiments and combined provide strong evidence for the existence of the effect. Moreover, the associative learning task allowed us to eliminate the semantic priming effect for two reasons. First, associations between shapes and moral characters were acquired right before the perceptual matching task, semantic priming from pre-existed knowledge was impossible. Second, there were only a few pairs of stimuli were used and each stimulus represented different conditions, making it impossible for priming between trials. Importantly, a series of control experiments (1b, 1c, and 2) further excluded other confounding factors such as familiarity, presenting sequence, or words-based associations, suggesting that it was the moral content that drove the prioritization of good character. 
+The robust prioritization of good character found in the current study was incongruent with previous moral perception studies, which usually reported a negativity bias, i.e., information related to bad character is processed preferentially [@anderson_visual_2011; @eiserbeck_visual_2020]. This discrepancy may be caused by the experimental task: while in many previous moral perception studies, the participants were asked to detect the existence of a stimulus, the current task asked participants to recognize a pattern. In other words, previous studies targeted early stages of perception while the current task focused more on decision-making at a relatively later stage of information processing. This discrepancy is consistent with the pattern found in studies with emotional stimuli [@pool_attentional_2016].
 
-The robust prioritization of good character found in the current study was incongruent with previous moral perception studies, which usually reported a negativity effect, i.e., information related to bad character is processed preferentially [@anderson_visual_2011; @eiserbeck_visual_2020]. This discrepancy may be caused by the experimental task: while in many previous moral perception studies, the participants were asked to detect the existence of a stimulus, the current task asked participants to recognize a pattern. In other words, previous studies targeted early stages of perception while the current task focused more on decision-making at a relatively later stage of information processing. This discrepancy is consistent with the pattern found in studies with emotional stimuli [@pool_attentional_2016].
+We expanded previous moral perception studies by focusing on the agent who made the perceptual decision-making and examined the interaction between moral valence and self-relevance. Our results revealed that prioritization of good character is modulated by self-relevance: good character was prioritized when it was related to the “self”, even when the self-relatedness was task-irrelevant. By contrast, good character information was not prioritized when it was associated with “other”. The modulation effect of self-relevance was large when the relationship between moral character and the self was explicit, which is consistent with previous studies that only positive aspects of the self are prioritized [@Hu_2020_GoodSelf]. More importantly, the effect persisted when the relationship between moral character and self-information was implicit, suggesting a spontaneous self-binding process when both pieces of information were presented. A possible explanation for this spontaneous self-binding of good character is that the positive moral self-view is central to our identity [@freitas_origins_2017; @strohminger_true_2017] and the motivation to maintain a moral self-view influences how we perceive [e.g., @Ma_JEPHPP_2010] and remember [e.g., @carlson_nat_comm_2020;@stanley_remembering_2019]. 
 
-We expanded previous moral perception studies by focusing on the agent who made the perceptual decision-making and examined the interaction between moral valence and self-referential processing. Our results revealed that prioritization of good character is modulated by self-referential processing: the good character was prioritized when it was related to the “self”, even when the self-relatedness was task-irrelevant. By contrast, good character information was not prioritized when it was associated with “other”. The modulation effect of self-referential processing was large when the relationship between moral character and the self was explicit, which is consistent with previous studies that only positive aspects of the self are prioritized [@Hu_2020_GoodSelf]. More importantly, the effect persisted when the relationship between moral character and self-information was implicit, suggesting spontaneous self-referential processing when both pieces of information were presented. A possible explanation for this spontaneous self-referential of good character is that the positive moral self-view is central to our identity [@freitas_origins_2017; @strohminger_true_2017] and the motivation to maintain a moral self-view influences how we perceive [e.g., @Ma_JEPHPP_2010] and remember [e.g., @carlson_nat_comm_2020;@stanley_remembering_2019]. 
-
-Although the results here revealed the prioritization of good character in perceptual decision-making, we did not claim that the motivation of a moral self-view *penetrates* perception. The perceptual decision-making process involves processes more than just encoding the sensory inputs. To fully account for the nuance of behavioral data and/or related data collected from other modules [e.g., @sui_electrophysiological_2023], we need computational models and an integrative experimental approach [@Almaatouq_BBS_2022]. For example, sequential sampling models suggest that, when making a perceptual decision, the agent continuously accumulates evidence until the amount of evidence passed a threshold, then a decision is made [@ratcliff_tics_2016; @forstmann_ann_rev_2016; @Hu_hitchhikers_2022]. In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory [@shadlen_decision_2016]. Recently, applications of sequential sample models to perceptual matching tasks also suggest that different processes may contribute to the prioritization effect of self [@golubickis_self-prioritization_2017] or good self [@Hu_2020_GoodSelf]. Similarly, reinforcement learning models also revealed that the key difference between self- and other-referential learning lies in the learning rate [@lockwood_nat_comm_2018]. These studies suggest that computational models are needed to disentangle the cognitive processes underlying the prioritization of good character.
+Although the results here revealed the prioritization of good character in perceptual decision-making, we did not claim that the motivation of a moral self-view *penetrates* perception. The perceptual decision-making process involves processes more than just encoding the sensory inputs. To fully account for the nuance of behavioral data and/or related data collected from other modules [e.g., @sui_electrophysiological_2023], we may need computational models and an integrative experimental approach [@Almaatouq_BBS_2022]. For example, sequential sampling models suggest that, when making a perceptual decision, the agent continuously accumulates evidence until the amount of evidence passed a threshold, then a decision is made [@ratcliff_tics_2016; @forstmann_ann_rev_2016; @Hu_hitchhikers_2022]. In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory [@shadlen_decision_2016]. Recently, applications of sequential sample models to perceptual matching tasks also suggest that different processes may contribute to the prioritization effect of self [@golubickis_self-prioritization_2017] or good self [@Hu_2020_GoodSelf]. Similarly, reinforcement learning models also revealed that the key difference between self- and other-referential learning lies in the learning rate [@lockwood_neural_2018]. These studies suggest that computational models are needed to disentangle the cognitive processes underlying the prioritization of good character.
 
 # References
 ```{r create_r-references, echo=FALSE,results='hide'}
